--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,11 @@
-# Database Config
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
-POSTGRES_HOST=
+# # Database Config
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=password
+# POSTGRES_DB=booking_system
+# POSTGRES_PORT=5432
+# POSTGRES_HOST=127.0.0.1
 
-# API Config
-PORT=
-DATABASE_URL=
-JWT_SECRET=
+# # API Config
+# PORT=4000
+# DATABASE_URL=postgresql://postgres:password@127.0.0.1:5432/booking_system
+# JWT_SECRET=mysecretkey
