--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "generate": "npx prisma generate",
     "db-seed": "npx prisma db seed",
     "db-pull": "npx prisma db pull",
+    "seed-pool": "node scripts/seedWithPool.js",
     "db-push": "npx prisma db push"
   },
   "prisma": {
@@ -22,11 +23,12 @@
     "@prisma/client": "6.4.1",
     "bcryptjs": "^3.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
